crates/keron-lang/tests/corpus/errors/check/map_heterogeneous_values.keron
val m = {"a": 1, "b": "two"}
